[package]
name = "genius_lyrics"
version = "1.0.4"
edition = "2021"
license-file = "LICENSE"
description = "Fetches lyrics of song from genius by it's URL"
repository = "https://github.com/dinaraparanid/genius_lyrics"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11.7", features = ["blocking"] }
scraper = "0.17.1"
html2text = "0.6.0"
regex = "1.5.4"
